--- a/src/component/header/header.css
+++ b/src/component/header/header.css
@@ -20,7 +20,10 @@ header {
 
 .logo-text {
   margin-right: auto;
-  font-size: 3rem;
+  font-size: 2.5rem;
+  font-family:'ubuntu', sans-serif;
+  color: #5f2323;
+  font-weight: 500;
 }
 
 .header > a {
@@ -29,5 +32,5 @@ header {
   color: #666666;
   text-transform: uppercase;
   font-size: 1.4rem;
-
+  font-weight: 500;
 }
