--- a/src/index.css
+++ b/src/index.css
@@ -17,7 +17,7 @@ body {
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
-  color: #484848;
+  color: #1b1b1b;
 }
 
 code {
