--- a/src/page/imhiring/imhiring.css
+++ b/src/page/imhiring/imhiring.css
@@ -1,4 +1,4 @@
-form{
+/* form{
     background-color: cadetblue;
     margin: 8rem auto;
     width:30%;
@@ -24,4 +24,4 @@ input{
 label{
     color: white;
     font-size: 1.5rem;
-}
+} */
