--- a/src/page/imlooking/imlooking.css
+++ b/src/page/imlooking/imlooking.css
@@ -1,6 +1,23 @@
+.imlooking-text{
+    width: 60%;
+    padding: 8rem  5rem 0rem;
+    font-size: 2rem;
+    display: inline-block;
+    line-height:3rem;
+}
+
+.imlooking-texttwo{
+    width: 60%;
+    padding: 1rem 5rem;
+    font-size: 2rem;
+    display:block;
+    line-height:3rem;
+}
+
+
 form{
     background-color: cadetblue;
-    margin: 8rem auto;
+   position: absolute;
     width:30%;
     display: flex;
     flex-direction: column;
@@ -8,20 +25,26 @@ form{
     justify-content: center;
     padding: 5rem 2rem;
     border-radius: .5rem;
+    float: right;
+    right: 8rem;
+    top: 10rem;
 }
 
 .form__input{
     padding: 1rem;
 }
 
-input{
-    float: right;
-    position: relative;
-    height: 3rem;
-    border-radius: .5rem;
-    width: 100%;
-}
 label{
     color: white;
     font-size: 1.5rem;
+    margin-bottom: 5rem;
+}
+
+input{
+    float: right;
+    position: relative;
+    height: 3.5rem;
+    border-radius: .5rem;
+    width: 100%;
+    border: none;
 }
